--- a/tutorial.Rmd
+++ b/tutorial.Rmd
@@ -12,7 +12,7 @@ devtools::install_github("hadley/emo")
 ```
 
 
-# Using Shiny to make genomics datasets more accessible
+# An Introduction to Shiny
 
 ## R packages
 
@@ -26,7 +26,7 @@ biocLite("breastCancerNKI")
 
 ## References
 
-- Shout-out to Monash Bioinformatics Platform for making their course notes available:- [LINK](https://monashbioinformaticsplatform.github.io/2016-11-03-r-shiny/)
+- Shout-out to Monash Bioinformatics Platform for making their [course notes available](https://monashbioinformaticsplatform.github.io/2016-11-03-r-shiny/) `r emo::ji("+1")`
 - Rstudio have a good collection of [tutorial videos](http://shiny.rstudio.com/tutorial/)
 - The [Shiny showcase](https://www.rstudio.com/products/shiny/shiny-user-showcase/)
 - A [Shiny cheatsheet](http://shiny.rstudio.com/articles/cheatsheet.html) to print off and pin to your desk
@@ -53,9 +53,9 @@ Create a new app with the following menus (call it `test` or something)
 
 **File** -> **New File** -> **Shiny web app**
 
-A file called `app.R` should appear in RStudio. This R script defines the UI (user interface), code run by the server and ends with an instruction to run the app. Note that you might see some older Shiny apps that were defined in two separate files (`UI.R` and `server.R`). If you view this file in RStudio the option to run the app will appear in the toolbar. Hitting the **Run App** Button will create a new RStudio window this example app. Congratulations, you have just created your first shiny app `r emo::ji("tada")`
+A file called `app.R` should appear in RStudiom and RStudio will have created a new directory with the app name that you specified (e.g. `test`). The `app.R` script defines the UI (user interface), app layout, code run by the server and ends with an instruction to run the app. Note that you might see some older Shiny apps that were defined in two separate files (`UI.R` and `server.R`). If you view this file in RStudio the option to run the app will appear in the top toolbar. Hitting the **Run App** Button will create a new RStudio window this example app. Congratulations, you have just created your first shiny app `r emo::ji("tada")`
 
-You could also view in a web browser.
+You could also view in a web browser. Please note that when presented "live" the Shiny app will appear below. On the static HTML pages linked from the course website, there will be *grey box* below.
 
 ```{r echo=FALSE}
 
@@ -132,19 +132,22 @@ ui <- fluidPage(
 )
 ```
 
+- There are two panels in the app layout; defined by the `sidebarPanel` and `mainPanel` arguments respectively
 - The UI part of the script defines an argument `bins` that is used to define the parameters of how the histogram is displayed. This is the basic principle of Shiny. 
 - A slider bar is used to choose a different value of `bins`, and this value can be accessed as `input$bins` from within in the `server` function (see later).  
 
 
 ## HTML and other formatting
 
-You can add other text to the sidebar in order to provide explanations and help to your app. HTML elements can be added by a number of functions that parallel common HTML tags. e.g. `h1`, `h2` for headers and `a` to create a hyperlink. The `helpText` function can also be used to add explanatory text below a particular input option. In the following code we add headers, some help text and a hyperlink to a reference about histograms. Images can also be added using the `img` function.
+TML elements can be added by a number of functions that parallel common HTML tags. e.g. `h1`, `h2` for headers and `a` to create a hyperlink. The `helpText` function can also be used to add explanatory text below a particular input option. In the following code we add headers, some help text and a hyperlink to a reference about histograms. Images can also be added using the `img` function.
+
+You can try copy-and-pasting this code over the default `sidebarPanel` function call in the `app.R` file you have created.
 
 ```{r eval=FALSE}
       ######
       sidebarPanel(
 
-        h1("Data  Exploration"),
+        h1("Data  Exploration Options"),
         h2("The histogram"),
          sliderInput("bins",
                      "Number of bins:",
@@ -173,7 +176,7 @@ ui <- fluidPage(
    # Sidebar with a slider input for number of bins 
    sidebarLayout(
       sidebarPanel(
-        h1("Data  Exploration"),
+        h1("Data  Exploration Options"),
         h2("The histogram"),
          sliderInput("bins",
                      "Number of bins:",
@@ -215,7 +218,7 @@ shinyApp(ui = ui, server = server)
 
 ## Inputs
 
-This histogram example uses the `sliderInput` function which allows the user to select a numeric value between some lower and upper bound. When faced with new R functions it is usually a good idea to read the help page; `?sliderInput`. We also have control over the amount by which the values change when the user slides the bar with `step` and the text label displayed above the bar.
+This histogram example uses the `sliderInput` function which allows the user to select a numeric value for the number of *bins* to allocate the data to between some lower and upper bound. We also have control over the amount by which the values change when the user slides the bar with `step`, and the text label displayed above the bar. (See `?sliderInput` for details).
 
 Other types of input are available for us to choose from and follow a similar syntax. i.e. each type of input has a `value` and `label` argument
 
@@ -232,7 +235,7 @@ Other types of input are available for us to choose from and follow a similar sy
 - `fileInput`
     + special input to upload a file
 
-To add an extra input, we need to add it as an argument to the `sidebarPanel` function. We could do this using a `radioButton`. The order of the arguments to `sidebarPanel` dictates the order in which the various elements are rendered in the HTML.
+To add an extra input option, we need to add it as an argument to the `sidebarPanel` function. We could add a option to colour the histogram using the `radioButton` function. The order of the arguments to `sidebarPanel` dictates the order in which the various elements are rendered in the HTML.
 
 
 ```{r eval=FALSE}
@@ -442,11 +445,11 @@ shinyApp(ui = ui, server = server)
 
 - Allow the user to define the title on the plot by adding a `textInput`
     + HINT: the `main` argument to the `hist` function lets you set the plot title.
-- The choice of red, green or blue is somewhat limiting. Create a dropdown box to allow the user to choose from any of the pre-defined colours in R. (HINT: the function `colours` returns the names of all valid colours as a vector)
+- The choice of red, green or blue is somewhat limiting. Create a dropdown box (`selectInput`) to allow the user to choose from any of the pre-defined colours in R. (HINT: the function `colours` returns the names of all valid colours as a vector)
 - OPTIONAL:- use `numericInput` boxes to allow the user to define a colour using its red, green and blue values.
     + the `rgb` function will convert a set of numeric values into a hexademical string that can be used as an argument for plotting.
     + the RGB value for red is `255,0,0`
-- create a tickbox to switch between specifying colour by name or rgb values.
+
 
 ## Outputs
 
@@ -466,9 +469,9 @@ We can add new outputs by adding new arguments to `mainPanel`. Let's say we want
 
 ```
 
-We then need to modify the server script to create the `boxPlot` object that we want to display. Having already created a histogram, we should just need a function that runs the command `boxplot(x)`.
+We then need to modify the server script to create the `boxPlot` object that we want to display. Having already created a histogram, we should just need a function that runs the command `boxplot(x)` and assigns the value to `output$boxPlot`.
 
-However, the following code is incorrect. Can you work out why?
+However, the following code is incorrect. Can you work out why? `r emo::ji("thinking")`
 
 ```{r eval=FALSE}
 server <- function(input, output) {
@@ -577,8 +580,7 @@ We will add a numerical summary of our dataset and a message to report the numbe
          verbatimTextOutput("summary"),
          plotOutput("boxPlot")
       )
-   )
-)
+
 
 ```
 
@@ -616,6 +618,23 @@ server <- function(input, output) {
 }
 ```
 
+The results panel is now getting a bit cluttered. If we wish we could change the layout so each distinct output is displayed in a different panel. This can be done with the `tabsetPanel` function.
+
+```{r eval=FALSE}
+      mainPanel(
+        tabsetPanel(
+          tabPanel("Bins", textOutput("chosenBins")),
+          tabPanel("Histogram",plotOutput("distPlot")),
+          tabPanel("Summary", verbatimTextOutput("summary")),
+          tabPanel("Boxplot", plotOutput("boxPlot"))
+          
+        )
+
+      )
+
+```
+
+
 ```{r echo=FALSE}
 library(shiny)
 
@@ -645,10 +664,14 @@ ui <- fluidPage(
       
       # Show a plot of the generated distribution
       mainPanel(
-         textOutput("chosenBins"),
-         plotOutput("distPlot"),
-         verbatimTextOutput("summary"),
-         plotOutput("boxPlot")
+        tabsetPanel(
+          tabPanel("Bins", textOutput("chosenBins")),
+          tabPanel("Histogram",plotOutput("distPlot")),
+          tabPanel("Summary", verbatimTextOutput("summary")),
+          tabPanel("Boxplot", plotOutput("boxPlot"))
+          
+        )
+
       )
    )
 )
